# rs-cms

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
lib/: Cargo.toml
lib/src/: colorspace.rs  consts.rs  err.rs  functions.rs  lib.rs  sem_ver.rs
lib/src/io/: file.rs  io_handler.rs  mem.rs  mod.rs  null.rs
lib/src/plugin/: curves.rs  formatter.rs  interp.rs  mod.rs  optimization.rs  parallel.rs  rendering_intent.rs  tag.rs  transform.rs
lib/src/plugin/tag_type/: mod.rs
lib/src/sig/: class.rs  colorimetric_intent.rs  colorspace.rs  curve_segment.rs  mod.rs  mpe_stage.rs  platform.rs  plugin.rs  response_curve.rs  tags.rs  technology.rs  types.rs
lib/src/state/: error.rs  mod.rs
lib/src/state/context/: mod.rs  test.rs
lib/src/threading/: spinlock.rs
lib/src/types/: curve.rs  date_time.rs  format.rs  interp_params.rs  lab.rs  lch.rs  mat.rs  mod.rs  position.rs  response.rs  signature.rs  transform.rs  vec.rs  xyy.rs  xyz.rs
lib/src/types/pipeline/: mod.rs
lib/src/types/stage/: clut.rs  curve.rs  matrix.rs  mod.rs
src/: consts.rs  lib.rs
src/io/: io_handler.rs
src/plugin/: mod.rs  tag.rs
src/plugin/tag_type/: mod.rs
src/state/: mod.rs
src/state/context/: mod.rs
src/state/plugin/: curve.rs  formatter.rs  interp.rs  mod.rs  tag.rs
src/types/: interp_params.rs  mod.rs  signature.rs  transform.rs
testbed/: Cargo.toml
testbed/src/: helpers.rs  lerp.rs  main.rs
