[package]
name = "cms"
authors = ["Stefan Kewatt <stefan.kewatt@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
chrono = "0.4.31"
log = "0.4.20"
