cargo-features = ["test-dummy-unstable"]

[package]
name = "rs-cms"
authors = ["Stefan Kewatt <stefan.kewatt@gmail.com>"]
version = "0.1.0"
edition = "2021"
im-a-teapot = false #lol
rust-version = "1.76.0"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
chrono = "0.4.31"
log = "0.4.20"
once_cell = "1.18.0"
paste = "1.0.14"
