cargo-features = ["test-dummy-unstable"]

[package]
name = "testbed"
authors = ["Stefan Kewatt <stefan.kewatt@gmail.com>"]
version = "0.1.0"
edition = "2021"
im-a-teapot = false #lol
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["cargo"] }
rs-cms = { version = "0.1.0", path = "../lib" }
log = "0.4.20"
simple_logger = "4.3.0"
